--- a/Austin Webinar Plots.ipynb
+++ b/Austin Webinar Plots.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f2a214d",
+   "id": "e4d963a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abb86039",
+   "id": "7bde6963",
    "metadata": {},
    "source": [
     "# 1. Calculate GHI values for each month"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10389f33",
+   "id": "a8e9f374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af9b232c",
+   "id": "1b4b964f",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cdb66455",
+   "id": "cc4a54bd",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dd311aad",
+   "id": "90e09529",
    "metadata": {},
    "outputs": [
     {
@@ -134,17 +134,17 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8ca24f30",
+   "id": "4c65c7d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_pickle('../Results_Golden.pkl')"
+    "data = pd.read_pickle('../Results_HPC_compiled_rough.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "15687628",
+   "id": "4bef346f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86ab9fdb",
+   "id": "25f937c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7b77e415",
+   "id": "d3e0b906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b469e3ca",
+   "id": "09c59e47",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1de2c8dd",
+   "id": "177c6713",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c1bcc64f",
+   "id": "5b4b75bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ce36f811",
+   "id": "adfc6e9a",
    "metadata": {},
    "outputs": [
     {
