--- a/AllSetupsResults/MAPS HPC Colorado-FINALPICKLE ALL SETUPS.ipynb
+++ b/AllSetupsResults/MAPS HPC Colorado-FINALPICKLE ALL SETUPS.ipynb
@@ -90,6 +90,417 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "5b516b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gid</th>\n",
+       "      <th>setup</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>pitch</th>\n",
+       "      <th>MonthStart</th>\n",
+       "      <th>MonthEnd</th>\n",
+       "      <th>ghi_sum</th>\n",
+       "      <th>ResultPVWm2Front</th>\n",
+       "      <th>ResultPVWm2Back</th>\n",
+       "      <th>...</th>\n",
+       "      <th>inside_normGHI</th>\n",
+       "      <th>testbedA1_normGHI</th>\n",
+       "      <th>testbedA2_normGHI</th>\n",
+       "      <th>testbedA3_normGHI</th>\n",
+       "      <th>testbedB1_normGHI</th>\n",
+       "      <th>testbedB2_normGHI</th>\n",
+       "      <th>testbedB3_normGHI</th>\n",
+       "      <th>testbedC1_normGHI</th>\n",
+       "      <th>testbedC2_normGHI</th>\n",
+       "      <th>testbedC3_normGHI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>389877</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.450001</td>\n",
+       "      <td>-109.059998</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87479</td>\n",
+       "      <td>115183.601300</td>\n",
+       "      <td>[8100.9732699999995, 7857.748389999999, 7806.4...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.510281</td>\n",
+       "      <td>0.431743</td>\n",
+       "      <td>0.543984</td>\n",
+       "      <td>0.551040</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>389881</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.290001</td>\n",
+       "      <td>-109.059998</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83447</td>\n",
+       "      <td>108208.682089</td>\n",
+       "      <td>[7731.925920000001, 7546.13574, 7469.28085, 75...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.522845</td>\n",
+       "      <td>0.434870</td>\n",
+       "      <td>0.560560</td>\n",
+       "      <td>0.568536</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>393321</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.849998</td>\n",
+       "      <td>-108.900002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72545</td>\n",
+       "      <td>92852.873450</td>\n",
+       "      <td>[7146.276545000001, 6933.6987469999995, 6912.8...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.526482</td>\n",
+       "      <td>0.437867</td>\n",
+       "      <td>0.554536</td>\n",
+       "      <td>0.581539</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>393325</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.689999</td>\n",
+       "      <td>-108.900002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73934</td>\n",
+       "      <td>94779.507987</td>\n",
+       "      <td>[7372.773784999999, 7101.775444, 7084.602393, ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.525179</td>\n",
+       "      <td>0.447542</td>\n",
+       "      <td>0.556978</td>\n",
+       "      <td>0.566849</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>393329</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.529999</td>\n",
+       "      <td>-108.900002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72555</td>\n",
+       "      <td>93436.576578</td>\n",
+       "      <td>[7082.0333, 6873.19812, 6805.714489999999, 685...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.512656</td>\n",
+       "      <td>0.458201</td>\n",
+       "      <td>0.543016</td>\n",
+       "      <td>0.534560</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10765</th>\n",
+       "      <td>557665</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.650002</td>\n",
+       "      <td>-102.180000</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87191</td>\n",
+       "      <td>56150.344444</td>\n",
+       "      <td>[46618.66, 46935.56, 47248.170000000006, 46271...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.759724</td>\n",
+       "      <td>0.861303</td>\n",
+       "      <td>0.770624</td>\n",
+       "      <td>0.754921</td>\n",
+       "      <td>0.759889</td>\n",
+       "      <td>0.743176</td>\n",
+       "      <td>0.719794</td>\n",
+       "      <td>0.708358</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10766</th>\n",
+       "      <td>557669</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.490002</td>\n",
+       "      <td>-102.180000</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87493</td>\n",
+       "      <td>56790.327778</td>\n",
+       "      <td>[44739.44999999999, 45182.23, 45621.16, 45239....</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.743714</td>\n",
+       "      <td>0.754413</td>\n",
+       "      <td>0.767952</td>\n",
+       "      <td>0.753603</td>\n",
+       "      <td>0.744723</td>\n",
+       "      <td>0.749444</td>\n",
+       "      <td>0.732078</td>\n",
+       "      <td>0.703782</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10767</th>\n",
+       "      <td>557673</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.330002</td>\n",
+       "      <td>-102.180000</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87113</td>\n",
+       "      <td>60055.417778</td>\n",
+       "      <td>[39885.69, 40534.54, 41179.66, 41824.77, 43989...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.739287</td>\n",
+       "      <td>0.768760</td>\n",
+       "      <td>0.777095</td>\n",
+       "      <td>0.737291</td>\n",
+       "      <td>0.747926</td>\n",
+       "      <td>0.748803</td>\n",
+       "      <td>0.713356</td>\n",
+       "      <td>0.681780</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10768</th>\n",
+       "      <td>557677</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.169998</td>\n",
+       "      <td>-102.180000</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>91388</td>\n",
+       "      <td>63438.651111</td>\n",
+       "      <td>[42318.58, 42800.36, 43278.35, 44418.62, 45064...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.742749</td>\n",
+       "      <td>0.769103</td>\n",
+       "      <td>0.757633</td>\n",
+       "      <td>0.766394</td>\n",
+       "      <td>0.747309</td>\n",
+       "      <td>0.752773</td>\n",
+       "      <td>0.716786</td>\n",
+       "      <td>0.689244</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10769</th>\n",
+       "      <td>557681</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.009998</td>\n",
+       "      <td>-102.180000</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87851</td>\n",
+       "      <td>60391.766667</td>\n",
+       "      <td>[41305.15, 41806.85, 42304.45, 43664.84, 44341...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.748145</td>\n",
+       "      <td>0.804306</td>\n",
+       "      <td>0.782412</td>\n",
+       "      <td>0.765023</td>\n",
+       "      <td>0.755984</td>\n",
+       "      <td>0.754544</td>\n",
+       "      <td>0.711769</td>\n",
+       "      <td>0.662974</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10770 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          gid  setup   latitude   longitude  pitch  MonthStart  MonthEnd  \\\n",
+       "0      389877      1  38.450001 -109.059998    5.0           1         1   \n",
+       "1      389881      1  38.290001 -109.059998    5.0           1         1   \n",
+       "2      393321      1  40.849998 -108.900002    5.0           1         1   \n",
+       "3      393325      1  40.689999 -108.900002    5.0           1         1   \n",
+       "4      393329      1  40.529999 -108.900002    5.0           1         1   \n",
+       "...       ...    ...        ...         ...    ...         ...       ...   \n",
+       "10765  557665     10  37.650002 -102.180000    8.6           1         1   \n",
+       "10766  557669     10  37.490002 -102.180000    8.6           1         1   \n",
+       "10767  557673     10  37.330002 -102.180000    8.6           1         1   \n",
+       "10768  557677     10  37.169998 -102.180000    8.6           1         1   \n",
+       "10769  557681     10  37.009998 -102.180000    8.6           1         1   \n",
+       "\n",
+       "       ghi_sum  ResultPVWm2Front  \\\n",
+       "0        87479     115183.601300   \n",
+       "1        83447     108208.682089   \n",
+       "2        72545      92852.873450   \n",
+       "3        73934      94779.507987   \n",
+       "4        72555      93436.576578   \n",
+       "...        ...               ...   \n",
+       "10765    87191      56150.344444   \n",
+       "10766    87493      56790.327778   \n",
+       "10767    87113      60055.417778   \n",
+       "10768    91388      63438.651111   \n",
+       "10769    87851      60391.766667   \n",
+       "\n",
+       "                                         ResultPVWm2Back  ... inside_normGHI  \\\n",
+       "0      [8100.9732699999995, 7857.748389999999, 7806.4...  ...       0.510281   \n",
+       "1      [7731.925920000001, 7546.13574, 7469.28085, 75...  ...       0.522845   \n",
+       "2      [7146.276545000001, 6933.6987469999995, 6912.8...  ...       0.526482   \n",
+       "3      [7372.773784999999, 7101.775444, 7084.602393, ...  ...       0.525179   \n",
+       "4      [7082.0333, 6873.19812, 6805.714489999999, 685...  ...       0.512656   \n",
+       "...                                                  ...  ...            ...   \n",
+       "10765  [46618.66, 46935.56, 47248.170000000006, 46271...  ...       0.759724   \n",
+       "10766  [44739.44999999999, 45182.23, 45621.16, 45239....  ...       0.743714   \n",
+       "10767  [39885.69, 40534.54, 41179.66, 41824.77, 43989...  ...       0.739287   \n",
+       "10768  [42318.58, 42800.36, 43278.35, 44418.62, 45064...  ...       0.742749   \n",
+       "10769  [41305.15, 41806.85, 42304.45, 43664.84, 44341...  ...       0.748145   \n",
+       "\n",
+       "       testbedA1_normGHI  testbedA2_normGHI  testbedA3_normGHI  \\\n",
+       "0               0.431743           0.543984           0.551040   \n",
+       "1               0.434870           0.560560           0.568536   \n",
+       "2               0.437867           0.554536           0.581539   \n",
+       "3               0.447542           0.556978           0.566849   \n",
+       "4               0.458201           0.543016           0.534560   \n",
+       "...                  ...                ...                ...   \n",
+       "10765           0.861303           0.770624           0.754921   \n",
+       "10766           0.754413           0.767952           0.753603   \n",
+       "10767           0.768760           0.777095           0.737291   \n",
+       "10768           0.769103           0.757633           0.766394   \n",
+       "10769           0.804306           0.782412           0.765023   \n",
+       "\n",
+       "       testbedB1_normGHI  testbedB2_normGHI  testbedB3_normGHI  \\\n",
+       "0                    NaN                NaN                NaN   \n",
+       "1                    NaN                NaN                NaN   \n",
+       "2                    NaN                NaN                NaN   \n",
+       "3                    NaN                NaN                NaN   \n",
+       "4                    NaN                NaN                NaN   \n",
+       "...                  ...                ...                ...   \n",
+       "10765           0.759889           0.743176           0.719794   \n",
+       "10766           0.744723           0.749444           0.732078   \n",
+       "10767           0.747926           0.748803           0.713356   \n",
+       "10768           0.747309           0.752773           0.716786   \n",
+       "10769           0.755984           0.754544           0.711769   \n",
+       "\n",
+       "       testbedC1_normGHI  testbedC2_normGHI  testbedC3_normGHI  \n",
+       "0                    NaN                NaN                NaN  \n",
+       "1                    NaN                NaN                NaN  \n",
+       "2                    NaN                NaN                NaN  \n",
+       "3                    NaN                NaN                NaN  \n",
+       "4                    NaN                NaN                NaN  \n",
+       "...                  ...                ...                ...  \n",
+       "10765           0.708358                NaN                NaN  \n",
+       "10766           0.703782                NaN                NaN  \n",
+       "10767           0.681780                NaN                NaN  \n",
+       "10768           0.689244                NaN                NaN  \n",
+       "10769           0.662974                NaN                NaN  \n",
+       "\n",
+       "[10770 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "af0ced64",
    "metadata": {},
